force-app/main/default/objects/ABCL_Integrations__mdt/ABCL_Integrations__mdt.object-meta.xml
<CustomObject>
    <label>ABCL Integrations</label>
    <pluralLabel>ABCL Integrations</pluralLabel>
</CustomObject>