force-app/main/default/objects/ABCL_Integrations__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Enter description of integration service.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>