force-app/main/default/objects/ABCL_Integrations__mdt/fields/EnableMockResponse__c.field-meta.xml
<CustomField>
    <fullName>EnableMockResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableMockResponse</label>
    <type>Checkbox</type>
</CustomField>