force-app/main/default/objects/ABCL_Integrations__mdt/fields/Exception_Log__c.field-meta.xml
<CustomField>
    <fullName>Exception_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Log</label>
    <type>Checkbox</type>
</CustomField>