force-app/main/default/objects/ABCL_Integrations__mdt/fields/Full_Log__c.field-meta.xml
<CustomField>
    <fullName>Full_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Log</label>
    <type>Checkbox</type>
</CustomField>