force-app/main/default/objects/ABCL_Integrations__mdt/fields/HTTP_Headers__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Headers__c</fullName>
    <label>HTTP Headers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>