force-app/main/default/objects/ABCL_Integrations__mdt/fields/Int_IV__c.field-meta.xml
<CustomField>
    <fullName>Int_IV__c</fullName>
    <label>Int IV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>