force-app/main/default/objects/ABCL_Integrations__mdt/fields/Int_Key__c.field-meta.xml
<CustomField>
    <fullName>Int_Key__c</fullName>
    <label>Int Key</label>
    <type>TextArea</type>
</CustomField>