force-app/main/default/objects/ABCL_Integrations__mdt/fields/Merchant_Id__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Id__c</fullName>
    <description>Merchant Id for payment lounge integrations (eNach Registration/Status etc.)</description>
    <label>Merchant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>