force-app/main/default/objects/ABCL_Integrations__mdt/fields/Mock_Response_Resource__c.field-meta.xml
<CustomField>
    <fullName>Mock_Response_Resource__c</fullName>
    <label>Mock Response Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>