force-app/main/default/objects/ABCL_Integrations__mdt/fields/Mock_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Mock_Status_Code__c</fullName>
    <label>Mock Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>