force-app/main/default/objects/ABCL_Integrations__mdt/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <label>Protocol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>