force-app/main/default/objects/ABCL_Integrations__mdt/fields/StoreAsAttachment__c.field-meta.xml
<CustomField>
    <fullName>StoreAsAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StoreAsAttachment</label>
    <type>Checkbox</type>
</CustomField>