force-app/main/default/objects/ABCL_Integrations__mdt/fields/URL_Parameters__c.field-meta.xml
<CustomField>
    <fullName>URL_Parameters__c</fullName>
    <label>URL Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>