force-app/main/default/objects/ABCL_Integrations__mdt/listViews/ABHI.listView-meta.xml
<ListView>
    <fullName>ABHI</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Protocol__c</columns>
    <columns>EnableMockResponse__c</columns>
    <columns>EndPoint__c</columns>
    <columns>Full_Log__c</columns>
    <columns>Exception_Log__c</columns>
    <columns>StoreAsAttachment__c</columns>
    <columns>URL_Parameters__c</columns>
    <columns>Mock_Status_Code__c</columns>
    <columns>Mock_Response_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>ABHI</value>
    </filters>
    <label>ABHI</label>
</ListView>